# ip_250411

./: .gitignore  .gitmodules  .kraxio  README.md  SCADA.ini  concrete.rcc  control.ex  customplugin.py.ex  default.scada  persist.json  pyproject.toml  pysca-hmi.desktop
debian/: README  README.Debian  README.source  changelog  control  copyright  files  ip-250411.cron.d.ex  postinst  rules
gui/: __main__.py  _version.py
src/: krax.csv  krax.json  krax.py  project.py
ui/: Extensions.ui  Home.ui
